# fly-vr

./: .gitignore  .requirements.frozen.txt  DESIGN.md  Im2P_VR_FicTracCalibrationCalc.m  LICENSE  MANIFEST.in  README.md  adam_config  blankStim.txt  calibrationStim.txt  calibrationStim2.txt  console_output.txt  debugExample.py  demo_experiment_and_playlist.yml  flyvr.py  installation_notes.md  output.txt  pipStim.mat  pyproject.toml  requirements.txt  setup.cfg  setup.py  tempStim.txt
audio/: attenuation.py  io_task.py  mixer.py  signal_producer.py  sound_server.py  stimuli.py  video_server.py
common/: build_arg_parser.py  concurrent_task.py  log_task.py  logger.py  mmtimer.py  plot_task.py  tools.py
configs/: downstairs.part.yml  upstairs.part.yml
control/: callback.py  motor_control.py  threshold_callback.py  two_photon_control.py
docs/: Makefile  conf.py  index.rst  make.bat
experiments/: ball_speed.py  cl_fixation.py  cl_random_audio_daq.py  paired_random_audio_daq.py  print_ball_speed.py  print_del_rot_error.yaml  print_state.py  stop_after_10s.yml  switch_randomly_video.py  timed_switch_audio1_video1.yml  timed_switch_video1.yml
fictrac/: fic_trac_task.py  fictrac_driver.py  plot_task.py  replay.py  shmem_transfer_data.py
fictrac_calibration/: CreateNewMask.m  FlyvrConfigMaster_closedloop.txt  FlyvrConfigMaster_openloop.txt  Im2P_CreateFilesFor_flyvr.m  MASK.tiff  output.txt  snap_2020-01-17-113707-0000.tif
flyvr/: analysis.py  gui.py  main.py
matlab/: Im2P_CreateNewMask.m  attenuateStim.m
mayamodel/: bottoms_fly19.npy  lefts_fly19.npy  (+1 more)
(+152 files in other folders)
